--- a/html/index.html
+++ b/html/index.html
@@ -148,10 +148,10 @@
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p class="head">运行Mantels
-</p><p>安装Python
-</p><p>建立虚拟环境
-</p><p>安装模块
-</p><p class="head">部署于服务器
+</p><p><a href="/content.html#!安装Python.md
+">安装Python</a><br></p><p><a href="/content.html#!建立虚拟环境.md
+">建立虚拟环境</a><br></p><p><a href="/content.html#!安装模块.md
+">安装模块</a><br></p><p class="head">部署于服务器
 </p><p>web服务器
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">nginx</a></div><div class="a-button"><a href="#
 ">apache</a></div></div><br><p>使用supervisor管理进程(Ubuntu Server)
@@ -180,14 +180,14 @@
 	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>关于文档中心
-</p><p class="head">建立文档中心主页
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html
+">关于文档中心</a><br></p><p class="head">建立文档中心主页
 </p><p>书写index_content.html
 </p><p>自动生成index
 </p><p class="head">建立文档
 </p><p class="head">文档规范
-</p><p>使用markdown书写文档
-</p><p>链接文档
+</p><p><a href="/content.html#!使用markdown书写文档.md
+">使用markdown书写文档</a><br></p><p>链接文档
 </p></div><div class="col-md-6"><p class="head">部署于服务器
 </p><p>web服务器
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">nginx</a></div><div class="a-button"><a href="#
@@ -202,12 +202,19 @@
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>Flask官方文档
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.jinkan.org/docs/flask/">中文</a></div><div class="a-button"><a href="http://flask.pocoo.org/docs/
-">English</a></div></div><br><p>Flask-SQLAlchemy 官方文档
-</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://www.pythondoc.com/flask">中文</a></div><div class="a-button"><a href="http://flask">English</a></div></div><br><p>Flask-Cors
-</p></div><div class="col-md-6"><p>Jinja2
-</p><p>tablib
-</p><p>requests
-</p></div></div><br><br></div><div class="tab-pane fade">
+">English</a></div></div><br><p>Flask SQLAlchemy 官方文档
+</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://www.pythondoc.com/flask">中文</a></div><div class="a-button"><a href="http://flask">English</a></div></div><br><p><a href="https://pypi.python.org/pypi/Flask">Flask Cors官方文档</a><br></p></div><div class="col-md-6"><p><a href="http://jinja.pocoo.org/
+">Jinja2官方文档</a><br></p><p><a href="http://docs.python">tablib官方文档</a><br></p><p>requests官方文档
+</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.python">中文</a></div><div class="a-button"><a href="http://www.python">English</a></div></div><br></div></div><br><br>
+<div class ="text-align: center;">
+	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-md-2" style="font-size: 28px; text-align: center;">参考资料</span>
+	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+</div>
+<div style="height: 70px;"></div>
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>部署记录
+</p><p><a href="/content.html#!部署记录_2018_2_3.md
+">20180203 阿里云 Ubuntu部署记录</a><br></p></div><div class="col-md-6"></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
 	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
 	<span class="col-md-2" style="font-size: 28px; text-align: center;">关于api</span>
@@ -223,8 +230,8 @@
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html#!获取access_key.md
-">获取access_key</a><br></p><p>学生登陆
-</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">二维码登陆</a></div><div class="a-button"><a href="#
+">获取access_key</a><br></p><p>学生登录
+</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="/content.html#!二维码登录.md">二维码登录</a></div><div class="a-button"><a href="#
 ">人脸识别</a></div></div><br></div><div class="col-md-6"><p>确认与服务器的连接
 </p></div></div><br><br>
 <div class ="text-align: center;">
