--- a/html/index.html
+++ b/html/index.html
@@ -105,19 +105,16 @@
     </div>
 		<br><br>
 		<div class="col-md-6" style="float: none;display: block;margin-left: auto;margin-right: auto;">
-			<ul class="nav nav-tabs" id="myTab">
-				<li class="col-md-4" style="margin: 0px; text-align: center;">
-					<img class="navimg" src="/help.png" style="width: 50px;"></img>
-					<a class="nava" href="#a1" data-toggle="tab">帮助文档</a>
-				</li>
-				<li class="col-md-4" style="margin: 0px; text-align: center;">
-					<img class="navimg" src="/develop-doc.png" style="width: 50px;"></img>
-					<a class="nava" href="#a2" data-toggle="tab">开发文档</a>
-				</li>
-				<li class="col-md-4" style="margin: 0px; text-align: center;">
-					<img class="navimg" src="/develop-doc.png" style="width: 50px;"></img>
-					<a class="nava" href="#a3" data-toggle="tab">开放api</a>
-				</li>
+			<ul class="nav nav-tabs" id="myTab"><li class="col-md-4" style="margin: 0px; text-align: center;">
+		<img class="navimg" src="/help.png" style="width: 50px;"></img>
+		<a class="nava" href="#a1" data-toggle="tab">帮助文档</a>
+	</li><li class="col-md-4" style="margin: 0px; text-align: center;">
+		<img class="navimg" src="/develop.png" style="width: 50px;"></img>
+		<a class="nava" href="#a2" data-toggle="tab">开发文档</a>
+	</li><li class="col-md-4" style="margin: 0px; text-align: center;">
+		<img class="navimg" src="/api.png" style="width: 50px;"></img>
+		<a class="nava" href="#a3" data-toggle="tab">开放api</a>
+	</li>
 			</ul>
 		</div>
 	</div>
@@ -182,13 +179,13 @@
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html
 ">关于文档中心</a><br></p><p class="head">建立文档中心主页
-</p><p>书写index_content.html
-</p><p>自动生成index
-</p><p class="head">建立文档
+</p><p><a href="/content.html#!书写index_content.html.md
+">书写index_content.html</a><br></p><p><a href="/content.html#!自动生成index.md
+">自动生成index</a><br></p><p class="head">建立文档
 </p><p class="head">文档规范
 </p><p><a href="/content.html#!使用markdown书写文档.md
-">使用markdown书写文档</a><br></p><p>链接文档
-</p></div><div class="col-md-6"><p class="head">部署于服务器
+">使用markdown书写文档</a><br></p><p><a href="/content.html#!链接文档.md
+">链接文档</a><br></p></div><div class="col-md-6"><p class="head">部署于服务器
 </p><p>web服务器
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">nginx</a></div><div class="a-button"><a href="#
 ">apache</a></div></div><br><p class="head">相关阅读
