移动端优化

--- a/html/index.html
+++ b/html/index.html
@@ -105,13 +105,13 @@
     </div>
 		<br><br>
 		<div class="col-md-6" style="float: none;display: block;margin-left: auto;margin-right: auto;">
-			<ul class="nav nav-tabs" id="myTab"><li class="col-md-4" style="margin: 0px; text-align: center;">
+			<ul class="nav nav-tabs" id="myTab"><li class="col-sm-4" style="margin: 0px; text-align: center;">
 		<img class="navimg" src="/help.png" style="width: 50px;"></img>
 		<a class="nava" href="#a1" data-toggle="tab">帮助文档</a>
-	</li><li class="col-md-4" style="margin: 0px; text-align: center;">
+	</li><li class="col-sm-4" style="margin: 0px; text-align: center;">
 		<img class="navimg" src="/develop.png" style="width: 50px;"></img>
 		<a class="nava" href="#a2" data-toggle="tab">开发文档</a>
-	</li><li class="col-md-4" style="margin: 0px; text-align: center;">
+	</li><li class="col-sm-4" style="margin: 0px; text-align: center;">
 		<img class="navimg" src="/api.png" style="width: 50px;"></img>
 		<a class="nava" href="#a3" data-toggle="tab">开放api</a>
 	</li>
@@ -123,28 +123,28 @@
 		<div id="myTabContent" class="tab-content">
 <div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">教师帮助</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">教师帮助</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>暂无
-</p></div><div class="col-md-6"></div></div><br><br>
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
+</p></div><div class="col-sm-6"></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">学生帮助</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">学生帮助</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>暂无
-</p></div><div class="col-md-6"></div></div><br><br></div><div class="tab-pane fade">
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
+</p></div><div class="col-sm-6"></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">安装指南</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">安装指南</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p class="head">运行Mantels
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">运行Mantels
 </p><p><a href="/content.html#!安装Python.md
 ">安装Python</a><br></p><p><a href="/content.html#!建立虚拟环境.md
 ">建立虚拟环境</a><br></p><p><a href="/content.html#!安装模块.md
@@ -152,32 +152,32 @@
 </p><p>web服务器
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">nginx</a></div><div class="a-button"><a href="#
 ">apache</a></div></div><br><p>使用supervisor管理进程(Ubuntu Server)
-</p></div><div class="col-md-6"><p class="head">相关阅读
+</p></div><div class="col-sm-6"><p class="head">相关阅读
 </p><p><a href="https://www.python.org/
 ">python官网</a><br></p><p><a href="http://nginx.org/en/
 ">nginx官网</a><br></p><p>Flask官方文档
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.jinkan.org/docs/flask/">中文</a></div><div class="a-button"><a href="http://flask.pocoo.org/docs/
 ">English</a></div></div><br></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">内部模块</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">内部模块</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>课程管理模块
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>课程管理模块
 </p><p>课件管理模块
 </p><p>成绩管理模块
 </p><p>时间模块
-</p></div><div class="col-md-6"><p>表单验证模块
+</p></div><div class="col-sm-6"><p>表单验证模块
 </p><p>蓝图载入模块
 </p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">文档中心</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">文档中心</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html
 ">关于文档中心</a><br></p><p class="head">建立文档中心主页
 </p><p><a href="/content.html#!书写index_content.html.md
 ">书写index_content.html</a><br></p><p><a href="/content.html#!自动生成index.md
@@ -185,62 +185,62 @@
 </p><p class="head">文档规范
 </p><p><a href="/content.html#!使用markdown书写文档.md
 ">使用markdown书写文档</a><br></p><p><a href="/content.html#!链接文档.md
-">链接文档</a><br></p></div><div class="col-md-6"><p class="head">部署于服务器
+">链接文档</a><br></p></div><div class="col-sm-6"><p class="head">部署于服务器
 </p><p>web服务器
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="#">nginx</a></div><div class="a-button"><a href="#
 ">apache</a></div></div><br><p class="head">相关阅读
 </p><p><a href="http://dynalon.github.io/mdwiki/#!index.md
 ">MDwiki官网</a><br></p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">依赖库</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">依赖库</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>Flask官方文档
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>Flask官方文档
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.jinkan.org/docs/flask/">中文</a></div><div class="a-button"><a href="http://flask.pocoo.org/docs/
 ">English</a></div></div><br><p>Flask SQLAlchemy 官方文档
-</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://www.pythondoc.com/flask">中文</a></div><div class="a-button"><a href="http://flask">English</a></div></div><br><p><a href="https://pypi.python.org/pypi/Flask">Flask Cors官方文档</a><br></p></div><div class="col-md-6"><p><a href="http://jinja.pocoo.org/
+</p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://www.pythondoc.com/flask">中文</a></div><div class="a-button"><a href="http://flask">English</a></div></div><br><p><a href="https://pypi.python.org/pypi/Flask">Flask Cors官方文档</a><br></p></div><div class="col-sm-6"><p><a href="http://jinja.pocoo.org/
 ">Jinja2官方文档</a><br></p><p><a href="http://docs.python">tablib官方文档</a><br></p><p>requests官方文档
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.python">中文</a></div><div class="a-button"><a href="http://www.python">English</a></div></div><br></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">参考资料</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">参考资料</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>部署记录
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>部署记录
 </p><p><a href="/content.html#!部署记录_2018_2_3.md
-">20180203 阿里云 Ubuntu部署记录</a><br></p></div><div class="col-md-6"></div></div><br><br></div><div class="tab-pane fade">
+">20180203 阿里云 Ubuntu部署记录</a><br></p></div><div class="col-sm-6"></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">关于api</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">关于api</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html#!关于数据传输.md
-">关于数据传输</a><br></p></div><div class="col-md-6"></div></div><br><br>
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!关于数据传输.md
+">关于数据传输</a><br></p></div><div class="col-sm-6"></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">用户相关</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">用户相关</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p><a href="/content.html#!获取access_key.md
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!获取access_key.md
 ">获取access_key</a><br></p><p>学生登录
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="/content.html#!二维码登录.md">二维码登录</a></div><div class="a-button"><a href="#
-">人脸识别</a></div></div><br></div><div class="col-md-6"><p>确认与服务器的连接
+">人脸识别</a></div></div><br></div><div class="col-sm-6"><p>确认与服务器的连接
 </p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-md-2" style="font-size: 28px; text-align: center;">实验相关</span>
-	<div class="col-md-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2" style="font-size: 28px; text-align: center;">实验相关</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-md-6"><p>提交实验结果
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>提交实验结果
 </p><p>获取实验结果
 </p><p>获取实验指导
-</p></div><div class="col-md-6"></div></div><br><br></div>
+</p></div><div class="col-sm-6"></div></div><br><br></div>
 		</div>
 	</div>
 	<hr>
@@ -264,14 +264,14 @@
 
 		//移入事件
 		$('li').mouseover(function(){
-			if ($(this).attr("class") == "col-md-4") {
+			if ($(this).attr("class") == "col-sm-4") {
 					change_color($(this), "#555")
 			}
 		})
 
 		//移出事件
 		$('li').mouseout(function(){
-			if ($(this).attr("class") == "col-md-4") {
+			if ($(this).attr("class") == "col-sm-4") {
 				change_color($(this), "#bbb")
 			}
 		})
