移动端优化

--- a/html/index.html
+++ b/html/index.html
@@ -123,25 +123,25 @@
 		<div id="myTabContent" class="tab-content">
 <div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">教师帮助</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">教师帮助</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
 </p></div><div class="col-sm-6"></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">学生帮助</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">学生帮助</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
 </p></div><div class="col-sm-6"></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">安装指南</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">安装指南</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">运行Mantels
@@ -159,9 +159,9 @@
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.jinkan.org/docs/flask/">中文</a></div><div class="a-button"><a href="http://flask.pocoo.org/docs/
 ">English</a></div></div><br></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">内部模块</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">内部模块</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>课程管理模块
@@ -172,9 +172,9 @@
 </p><p>蓝图载入模块
 </p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">文档中心</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">文档中心</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html
@@ -192,9 +192,9 @@
 </p><p><a href="http://dynalon.github.io/mdwiki/#!index.md
 ">MDwiki官网</a><br></p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">依赖库</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">依赖库</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>Flask官方文档
@@ -204,26 +204,26 @@
 ">Jinja2官方文档</a><br></p><p><a href="http://docs.python">tablib官方文档</a><br></p><p>requests官方文档
 </p><div  style="height: auto; display: inline-block;"><div class="a-button"><a href="http://docs.python">中文</a></div><div class="a-button"><a href="http://www.python">English</a></div></div><br></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">参考资料</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">参考资料</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>部署记录
 </p><p><a href="/content.html#!部署记录_2018_2_3.md
 ">20180203 阿里云 Ubuntu部署记录</a><br></p></div><div class="col-sm-6"></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">关于api</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">关于api</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!关于数据传输.md
 ">关于数据传输</a><br></p></div><div class="col-sm-6"></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">用户相关</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">用户相关</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!获取access_key.md
@@ -232,9 +232,9 @@
 ">人脸识别</a></div></div><br></div><div class="col-sm-6"><p>确认与服务器的连接
 </p></div></div><br><br>
 <div class ="text-align: center;">
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
-	<span class="col-sm-2" style="font-size: 28px; text-align: center;">实验相关</span>
-	<div class="col-sm-5" style="float: left; height:40px;"><div style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
+	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">实验相关</span>
+	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>提交实验结果
@@ -300,6 +300,10 @@
 	$("div.tab-pane:eq(1)").attr("id", "a2")
 	$("div.tab-pane:eq(2)").attr("id", "a3")
 
+	if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
+		$('.tabhead').css("font-size", "20px")
+		$('.tabheadline').css("top", "15px")
+	}
 
 </script>
 </body>
