--- a/html/index.html
+++ b/html/index.html
@@ -128,8 +128,9 @@
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
-</p></div><div class="col-sm-6"></div></div><br><br>
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">实验
+</p><p><a href="/content.html#!生成一份实验报告.md
+">生成一份实验报告</a><br></p></div><div class="col-sm-6"></div></div><br><br>
 <div class ="text-align: center;">
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
 	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">学生帮助</span>
@@ -237,8 +238,8 @@
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>提交实验结果
-</p><p>获取实验结果
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!提交实验结果.md
+">提交实验结果</a><br></p><p>获取实验结果
 </p><p>获取实验指导
 </p></div><div class="col-sm-6"></div></div><br><br></div>
 		</div>
