--- a/生成工具/index_content.html
+++ b/生成工具/index_content.html
@@ -7,16 +7,48 @@ tab3:开放api-api.png
 tab:
 -教师帮助-
 left:
-p:暂无
+h:用户信息
+a:注册与登录-#
+a:修改密码-/content.html#!修改密码.md
+a:邮箱验证-/content.html#!邮箱验证.md
+a:邀请码-/content.html#!邀请码.md
+
+h:课程相关
+a:课程创建-/content.html#!课程创建.md
+a:管理课程-/content.html#!管理课程.md
+a:作业系统-/content.html#!作业系统.md
+a:创建习题-/content.html#!创建习题.md
+a:成绩-/content.html#!成绩.md
+
 endleft
 right:
+h:第三方授权
+a:开启安全令牌-/content.html#!安全令牌.md
+
+h:拓展阅读
+a:使用markdown书写文档-/content.html#!使用markdown书写文档.md
+a:Mantels markdown入门手册-/content.html#!入门手册.md
+
 endright:
 
 -学生帮助-
 left:
-p:暂无
+h:用户信息
+a:注册与登录-#
+a:个人信息-/content.html#!个人信息.md
+
+h:课程相关
+a:课程表-/content.html#!课程表.md
+a:选课系统-/content.html#!选课系统.md
+a:成绩-/content.html#!成绩.md
+a:作业系统-/content.html#!作业系统.md
+
 endleft
 right:
+h:第三方授权
+a:人脸识别-/content.html#!人脸识别.md
+a:扫码登录-/content.html#!扫码登录.md
+
 endright:
 endtab
 
