--- a/html/index.html
+++ b/html/index.html
@@ -128,17 +128,41 @@
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">实验
-</p><p><a href="/content.html#!生成一份实验报告.md
-">生成一份实验报告</a><br></p></div><div class="col-sm-6"></div></div><br><br>
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">用户信息
+</p><p><a href="#
+">注册与登录</a><br></p><p><a href="/content.html#!修改密码.md
+">修改密码</a><br></p><p><a href="/content.html#!邮箱验证.md
+">邮箱验证</a><br></p><p><a href="/content.html#!邀请码.md
+">邀请码</a><br></p><p class="head">课程相关
+</p><p><a href="/content.html#!课程创建.md
+">课程创建</a><br></p><p><a href="/content.html#!管理课程.md
+">管理课程</a><br></p><p><a href="/content.html#!作业系统.md
+">作业系统</a><br></p><p><a href="/content.html#!创建习题.md
+">创建习题</a><br></p><p><a href="/content.html#!成绩.md
+">成绩</a><br></p></div><div class="col-sm-6"><p class="head">第三方授权
+</p><p><a href="/content.html#!安全令牌.md
+">开启安全令牌</a><br></p><p class="head">拓展阅读
+</p><p><a href="/content.html#!使用markdown书写文档.md
+">使用markdown书写文档</a><br></p><p><a href="/content.html#!入门手册.md
+">Mantels markdown入门手册</a><br></p></div></div><br><br>
 <div class ="text-align: center;">
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
 	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">学生帮助</span>
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>暂无
-</p></div><div class="col-sm-6"></div></div><br><br></div><div class="tab-pane fade">
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">用户信息
+</p><p><a href="#
+">注册与登录</a><br></p><p><a href="/content.html#!个人信息.md
+">个人信息</a><br></p><p class="head">课程相关
+</p><p><a href="/content.html#!课程表.md
+">课程表</a><br></p><p><a href="/content.html#!选课系统.md
+">选课系统</a><br></p><p><a href="/content.html#!成绩.md
+">成绩</a><br></p><p><a href="/content.html#!作业系统.md
+">作业系统</a><br></p></div><div class="col-sm-6"><p class="head">第三方授权
+</p><p><a href="/content.html#!人脸识别.md
+">人脸识别</a><br></p><p><a href="/content.html#!扫码登录.md
+">扫码登录</a><br></p></div></div><br><br></div><div class="tab-pane fade">
 <div class ="text-align: center;">
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb;"></div></div>
 	<span class="col-sm-2 tabhead" style="font-size: 28px; text-align: center;">安装指南</span>
@@ -238,8 +262,8 @@
 	<div class="col-sm-5" style="float: left; height:40px;"><div class="tabheadline" style="position: relative; top:20px; width:100%; border:1px solid #bbb"></div></div>
 </div>
 <div style="height: 70px;"></div>
-<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p><a href="/content.html#!提交实验结果.md
-">提交实验结果</a><br></p><p>获取实验结果
+<div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p>提交实验结果
+</p><p>获取实验结果
 </p><p>获取实验指导
 </p></div><div class="col-sm-6"></div></div><br><br></div>
 		</div>
