--- a/html/index.html
+++ b/html/index.html
@@ -130,15 +130,13 @@
 <div style="height: 70px;"></div>
 <div style="height: auto; width: 100%; display:inline-block;"> <div class="col-sm-6"><p class="head">用户信息
 </p><p><a href="#
-">注册与登录</a><br></p><p><a href="/content.html#!修改密码.md
-">修改密码</a><br></p><p><a href="/content.html#!邮箱验证.md
-">邮箱验证</a><br></p><p><a href="/content.html#!邀请码.md
+">注册与登录</a><br></p><p><a href="/content.html#!个人信息.md
+">个人信息</a><br></p><p><a href="/content.html#!邀请码.md
 ">邀请码</a><br></p><p class="head">课程相关
 </p><p><a href="/content.html#!课程创建.md
 ">课程创建</a><br></p><p><a href="/content.html#!管理课程.md
 ">管理课程</a><br></p><p><a href="/content.html#!作业系统.md
-">作业系统</a><br></p><p><a href="/content.html#!创建习题.md
-">创建习题</a><br></p><p><a href="/content.html#!成绩.md
+">作业系统</a><br></p><p><a href="/content.html#!成绩.md
 ">成绩</a><br></p></div><div class="col-sm-6"><p class="head">第三方授权
 </p><p><a href="/content.html#!安全令牌.md
 ">开启安全令牌</a><br></p><p class="head">拓展阅读
