--- a/生成工具/index_content.html
+++ b/生成工具/index_content.html
@@ -9,15 +9,13 @@ tab:
 left:
 h:用户信息
 a:注册与登录-#
-a:修改密码-/content.html#!修改密码.md
-a:邮箱验证-/content.html#!邮箱验证.md
+a:个人信息-/content.html#!个人信息.md
 a:邀请码-/content.html#!邀请码.md
 
 h:课程相关
 a:课程创建-/content.html#!课程创建.md
 a:管理课程-/content.html#!管理课程.md
 a:作业系统-/content.html#!作业系统.md
-a:创建习题-/content.html#!创建习题.md
 a:成绩-/content.html#!成绩.md
 
 endleft
