--- a/html/index.html
+++ b/html/index.html
@@ -133,8 +133,7 @@
 ">注册与登录</a><br></p><p><a href="/content.html#!个人信息.md
 ">个人信息</a><br></p><p><a href="/content.html#!邀请码.md
 ">邀请码</a><br></p><p class="head">课程相关
-</p><p><a href="/content.html#!课程创建.md
-">课程创建</a><br></p><p><a href="/content.html#!管理课程.md
+</p><p><a href="/content.html#!管理课程.md
 ">管理课程</a><br></p><p><a href="/content.html#!作业系统.md
 ">作业系统</a><br></p><p><a href="/content.html#!成绩.md
 ">成绩</a><br></p></div><div class="col-sm-6"><p class="head">第三方授权
